--- a/CgineEditor/GameProject/NewProjectView.xaml
+++ b/CgineEditor/GameProject/NewProjectView.xaml
@@ -41,7 +41,7 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,30,0,0">
-            <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"/>
+            <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}" Click="OnCreate_Button_Clicked"/>
             <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
         </StackPanel>
         <TextBlock Text="{Binding ErrorMsg}" Margin="0,20,0,0" HorizontalAlignment="Center"/>
