--- a/CgineEditor/GameProject/ProjectBrowserDialog.xaml
+++ b/CgineEditor/GameProject/ProjectBrowserDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CgineEditor.GameProject"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
         Title="Project Browser" Height="600" Width="800">
     <Grid>
         <Grid.RowDefinitions>
