--- a/CgineEditor/GameProject/OpenProjectView.xaml
+++ b/CgineEditor/GameProject/OpenProjectView.xaml
@@ -6,6 +6,9 @@
              xmlns:local="clr-namespace:CgineEditor.GameProject"
              mc:Ignorable="d" Width="800"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <local:OpenProject/>
+    </UserControl.DataContext>
     <StackPanel Background="White">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <ListBox Width="195" Height="250"/>
