open project event

--- a/CgineEditor/GameProject/OpenProjectView.xaml
+++ b/CgineEditor/GameProject/OpenProjectView.xaml
@@ -13,6 +13,11 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <ListBox Width="195" Height="250" ItemsSource="{Binding Projects}" x:Name="projectsListBox"
                      SelectedIndex="0">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <EventSetter Event="MouseDoubleClick" Handler="OnListBoxItem_Mouse_DoubleClick"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -31,7 +36,7 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,30,0,0">
             <Button Content="Open" Width="96" IsDefault="True"/>
-            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True" Click="OnOpen_Button_Clicked"/>
         </StackPanel>
     </StackPanel>
 </UserControl>
