--- a/CgineEditor/MainWindow.xaml
+++ b/CgineEditor/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CgineEditor"
+        xmlns:editors="clr-namespace:CgineEditor.Editors"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="Cgine Editor" Height="450" Width="800">
+        Title="Cgine Editor" Height="900" Width="1600">
     <Grid>
-
+        <editors:WorldEditorView/>
     </Grid>
 </Window>
