--- a/CgineEditor/Editors/WorldEditor/ProjectLayoutView.xaml
+++ b/CgineEditor/Editors/WorldEditor/ProjectLayoutView.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="32"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Content="Add Scene" Width="96" VerticalAlignment="Center" Focusable="False" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0"/>
+        <Button Content="Add Scene" Width="96" VerticalAlignment="Center" Focusable="False" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0" Click="OnAddScene_Button_Clicked"/>
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding Scenes}">
                 <ItemsControl.ItemsPanel>
@@ -29,7 +29,7 @@
                                     <TextBlock Text="{Binding Name}"/>
                                 </Grid>
                             </Expander.Header>
-                            <Border Background="Blue"/>
+                            <Border Background="Blue" Height="100"/>
                         </Expander>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
