--- a/CgineEditor/Editors/WorldEditor/ProjectLayoutView.xaml
+++ b/CgineEditor/Editors/WorldEditor/ProjectLayoutView.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="32"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Content="Add Scene" Width="96" VerticalAlignment="Center" Focusable="False" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0" Click="OnAddScene_Button_Clicked"/>
+        <Button Content="Add Scene" Width="96" VerticalAlignment="Center" Focusable="False" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0" Command="{Binding AddScene}"/>
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding Scenes}">
                 <ItemsControl.ItemsPanel>
@@ -26,7 +26,10 @@
                         <Expander IsExpanded="{Binding IsActive,Mode=OneWay}">
                             <Expander.Header>
                                 <Grid>
-                                    <TextBlock Text="{Binding Name}"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding Name}"/>
+                                        <Button Content="Remove" Command="{Binding DataContext.RemoveScene, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding }" Margin="20,0" Focusable="False"/>
+                                    </StackPanel>
                                 </Grid>
                             </Expander.Header>
                             <Border Background="Blue" Height="100"/>
