--- a/CgineEditor/GameProject/OpenProjectView.xaml
+++ b/CgineEditor/GameProject/OpenProjectView.xaml
@@ -36,7 +36,7 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,30,0,0">
             <Button Content="Open" Width="96" IsDefault="True" Click="OnOpen_Button_Clicked"/>
-            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True" Click="OnOpen_Button_Clicked"/>
+            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True" Click="OnExit_Button_Clicked"/>
         </StackPanel>
     </StackPanel>
 </UserControl>
