--- a/CgineEditor/Editors/EntityView.xaml
+++ b/CgineEditor/Editors/EntityView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CgineEditor.Editors.GameEntityView"
+﻿<UserControl x:Class="CgineEditor.Editors.EntityView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
