--- a/CgineEditor/GameProject/ProjectBrowserDialog.xaml
+++ b/CgineEditor/GameProject/ProjectBrowserDialog.xaml
@@ -18,8 +18,8 @@
                           Click="OnToggleButton_Click" IsChecked="False"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1" x:Name="browserContent" >
-            <local:OpenProjectView />
-            <local:NewProjectView />
+            <local:OpenProjectView x:Name="openProjectView"/>
+            <local:NewProjectView x:Name="newProjectView"/>
         </StackPanel>
     </Grid>
 </Window>
