--- a/CgineEditor/Editors/WorldEditor/EntityView.xaml
+++ b/CgineEditor/Editors/WorldEditor/EntityView.xaml
@@ -24,7 +24,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0"/>
-            <TextBox Text="{Binding Name}" Grid.Column="1"/>
+            <TextBox Text="{Binding Name}" Grid.Column="1" Tag="{Binding RenameCommand}"/>
             <StackPanel Orientation="Horizontal" Grid.Column="2">
                 <TextBlock Text="Enabled" Margin="5,0,0,0"/>
                 <CheckBox IsChecked="{Binding IsEnabled}" Margin="5,0" VerticalAlignment="Center"/>
